Try to fix search box layout on mobile size devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -681,6 +681,10 @@ h4{
     background-color: rgba(250, 250, 240, .4);
 }
 
+.search-form input[type=text]:not(.browser-default){
+    height: 2rem;
+}
+
 .search-form.input-field{
     top: .56rem;
     max-height: 2.9rem;
@@ -841,6 +845,8 @@ small.blue-text{
 .review-box .input-field>label{
     position: unset;
 }
+
+
 } 
 
 
